# Codex-common-news-reports

./: .gitignore  AGENTS.md  AGENTS_1.md  AGENTS_2.md  AGENTS_3.md  README.md  fast_bunkai_chonky_chunker.py  gemma4_e2b_video_summary.py  hello.py  main.py  pyproject.toml  qwen3_vl_video_summary.py  requirements.txt  temp_tasklist.md  temp_transcript.ja.vtt  test_gemini_cli.py  test_gemma4_ytdlp_skip.py  test_video_download.py  uvの使い方.md  yt_top3_gemini_report.py
.codex/: config.toml
Gemini_YouTube_Summary_Report/: report.md
Qwen3VL_YouTube_Summary_Report/: report.md
gemma4_reports/: 2026-04-11_gemma4_summary.md  2026-04-12_gemma4_summary.md  2026-04-13_gemma4_summary.md  2026-04-17_gemma4_summary.md  2026-04-20_gemma4_summary.md  2026-04-23_gemma4_summary.md  2026-04-24_gemma4_summary.md  2026-04-26_gemma4_summary.md  2026-04-27_gemma4_summary.md  2026-04-28_gemma4_summary.md  2026-05-05_gemma4_summary.md  2026-05-07_gemma4_summary.md  2026-05-14_gemma4_summary.md  2026-05-20_gemma4_summary.md  2026-05-21_gemma4_summary.md  2026-05-25_gemma4_summary.md  2026-05-26_gemma4_summary.md  2026-05-27_gemma4_summary.md  2026-05-29_gemma4_summary.md  2026-05-30_gemma4_summary.md  2026-05-31_gemma4_summary.md  2026-06-05_gemma4_summary.md  2026-06-06_gemma4_summary.md  2026-06-09_gemma4_summary.md  2026-06-12_gemma4_summary.md  2026-06-13_gemma4_summary.md  2026-06-16_gemma4_summary.md  2026-06-18_gemma4_summary.md  2026-06-19_gemma4_summary.md  2026-06-20_gemma4_summary.md  2026-06-22_gemma4_summary.md  2026-06-23_gemma4_summary.md  2026-06-24_gemma4_summary.md  2026-06-25_gemma4_summary.md  2026-06-29_gemma4_summary.md  2026-07-04_gemma4_summary.md  2026-07-05_gemma4_summary.md  2026-07-07_gemma4_summary.md  2026-07-09_gemma4_summary.md  2026-07-10_gemma4_summary.md  (+7 more)
out_report/: report.md
qwen3_vl_reports/: 2026-03-29_qwen3_vl_summary.md  2026-03-30_qwen3_vl_summary.md  2026-03-31_qwen3_vl_summary.md
reports/: codex_raw_output_20260209.txt  codex_raw_output_20260213.txt  codex_raw_output_20260216.txt  codex_raw_output_20260330.txt  codex_raw_output_20260410.txt  codex_raw_output_20260411.txt
reports/2026-02-06/: report_1.md  (+5 more)
scripts/: codex_daily_with_agents_common_news.py  codex_test.py  colab_test_rss.py  dummy_data_push_test.py  feed.toml  get_github_trending.py  get_reddit.py  get_rss.py  git_test.py  languages.toml  turso_push_report.py
(+1022 files in other folders)
